# DX11-foolery

./: CMakeLists.txt  README.md  sampleShader.hlsl
res/font/: Hack.dds
src/: DX.h  cube.cpp  cube.h  d3drenderer.cpp  d3drenderer.h  font.h  main.cpp  sprite.cpp  sprite.h  window.cpp  window.h
